# effect-calculus

./: .ghci.repl  cabal.project.ci  effect-calculus.cabal  hie.yaml
.github/workflows/: ci.yml
script/: ghci-flags
src/Effect/: Syntax.hs
